<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/tvAssignName"
        android:layout_width="252dp"
        android:layout_height="37dp"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="68dp"
        android:text="Assignment Name"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etTaskName"
        android:layout_width="232dp"
        android:layout_height="43dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="A name for task"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="408dp"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAssignName">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="77dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="start|top"
                android:hint="Enter Description"
                android:inputType="textMultiLine"
                android:layout_marginBottom="12dp"
                android:textAlignment="center"
                tools:ignore="RtlCompat" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="match_parent"
                app:singleSelection="true"
                android:checkedButton="@+id/rdGroup"
                android:orientation="horizontal"
                android:layout_height="54dp">

                <RadioButton
                    android:id="@+id/rdIndividual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="70dp"
                    android:gravity="center"
                    android:text="Individual"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rdGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Group"

                    android:textSize="18sp" />

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/tvCourseName"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:text="Course Name"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/scrollView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etCourseName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="COMP 7901"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <DatePicker
                android:id="@+id/date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.686"
                tools:ignore="RtlSymmetry" />

            <TimePicker
                android:id="@+id/time_picker"
                android:layout_weight="4"
                android:layout_width="match_parent"
                android:layout_height="390dp"
                android:descendantFocusability="blocksDescendants">
                <requestFocus />
            </TimePicker>

            <Button
                android:id="@+id/btSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="addToViewPage"
                android:text="Save"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.991" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
