...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2"
        app:layout_constraintVertical_bias="0.163" />

    <Button
        android:id="@+id/addRecord2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:onClick="viewRecords"
        android:text="VIEW RECORDS"
        app:layout_constraintBottom_toBottomOf="parent"
...
